                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 07-05-2006 fixed: Progressdialog would popup repeatadly when retreiving a large shoutcast directory.
 - 07-05-2006 changed: Rss feed setup to UserData\RssFeeds.xml
                       Keymap.xml to UserData\Keymap.xml
                       System\LCD.xml to UserData\LCD.xml
                       System\Partymode.xml to UserData\Partymode.xml
 - 07-05-2006 changed: Removed old thumb code.
 - 07-05-2006 changed: Background thumb loader for My Programs + changed My Programs + Kai thumb location.
 - 06-05-2006 fixed: Crash in my music if an action in the contextmenu caused the listing to change and the previous selected index was out of range in the new listing.
 - 06-05-2006 fixed: Insane shoutcast memory usage. (now uses 256KB instead of 5MB internally)
 - 06-05-2006 changed: you can now alter trainer settings while kai is running. upon launch you will be asked to choose between kai and trainers.
 - 06-05-2006 changed: when viewing a .cbr/.cbz, move to top left corner on image change.
 - 06-05-2006 fixed: crash in my video info screen if you searched a movie by actor, then hit plot.
 - 06-05-2006 fixed: New loglevels were slightly out (meant you always had full debug logging.)
 - 06-05-2006 changed: Cleaned up more thumb related code (Picture thumbs are now in UserData/Thumbnails/Pictures/0..F/)
 - 05-05-2006 fixed: hopefully increased my programs speed a bit.
 - 05-05-2006 added: "Safe mode" key combination (WHITE + Y) on startup to invoke the fatal error handler (gives FTP access).  Thanks to Bizzeh.
 - 05-05-2006 changed: Cleaned up the video assigning code.  Video thumbnails are now stored in UserData/Thumbnails/Video.