@@ -1074,14 +1074,12 @@ HRESULT CApplication::Initialize()
 
   CLog::Log(LOGINFO, "userdata folder: %s", g_stSettings.m_userDataFolder.c_str());
   CLog::Log(LOGINFO, "  shortcuts folder:%s", g_stSettings.m_szShortcutDirectory);
-  CLog::Log(LOGINFO, "  recording folder:%s", g_stSettings.m_szMusicRecordingDirectory);
-  CLog::Log(LOGINFO, "  screenshots folder:%s", g_stSettings.m_szScreenshotsDirectory);
-
+  CLog::Log(LOGINFO, "  recording folder:%s", g_guiSettings.GetString("MyMusic.RecordingPath",false).c_str());
+  CLog::Log(LOGINFO, "  screenshots folder:%s", g_guiSettings.GetString("System.ScreenshotPath",false).c_str());
+	
   if (!g_guiSettings.GetBool("MyPrograms.NoShortcuts"))
     CreateDirectory(g_stSettings.m_szShortcutDirectory, NULL);
-  CreateDirectory(g_stSettings.m_szMusicRecordingDirectory, NULL);
-  CreateDirectory(g_stSettings.m_szScreenshotsDirectory, NULL);
-
+  
   // UserData folder layout:
   // UserData/
   //   Database/
@@ -1117,12 +1115,6 @@ HRESULT CApplication::Initialize()
     strThumbLoc += "\\" + strHex;
     CreateDirectory(strThumbLoc.c_str(),NULL);
   }
-
-  // create playlist folders
-  CLog::Log(LOGINFO, "  playlists folder:%s", g_stSettings.m_szPlaylistsDirectory);
-  CreateDirectory(g_stSettings.m_szPlaylistsDirectory, NULL);
-  CreateDirectory(CUtil::MusicPlaylistsLocation().c_str(), NULL);
-  CreateDirectory(CUtil::VideoPlaylistsLocation().c_str(), NULL);
 
   CreateDirectory("Z:\\temp", NULL); // temp directory for python
   CreateDirectory("Q:\\scripts", NULL);
